<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/large_padding">

            <ImageView
                android:id="@+id/playCurrentShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_baseline_play_arrow" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/x_medium_padding">

                <TextView
                    android:id="@+id/showLiveStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/xx_small_padding"
                    android:textColor="@color/white"
                    android:textSize="@dimen/large_size" />

                <TextView
                    android:id="@+id/showTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/medium_size" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/large_padding"
            android:paddingRight="@dimen/large_padding">

            <TextView
                android:id="@+id/showTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/small_padding"
                android:paddingBottom="@dimen/xx_small_padding"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_size" />

            <TextView
                android:id="@+id/creatorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/small_size" />

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/show_detail_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/showDescriptionDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/show_description_detail"
                    android:textColor="@color/medium_light_gray"
                    android:textSize="@dimen/small_size"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/readMore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="Read More"
                    android:textColor="@color/medium_light_gray"
                    android:textSize="@dimen/small_size"
                    android:visibility="visible" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xx_large_margin"
                    android:drawableLeft="@drawable/ic_baseline_share_24"
                    android:drawablePadding="@dimen/small_padding"
                    android:text="Share"
                    android:textColor="@color/white"
                    android:textSize="@dimen/medium_size"
                    android:textStyle="bold" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large_margin">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/medium_light_gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:text="@string/more_episodes"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:text="@string/see_all"
                        android:textColor="@color/white" />

                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</LinearLayout>
