<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fillViewport="true"
    android:orientation="vertical">

    <include layout="@layout/dashboard_full_image_show" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/playerContainer"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintDimensionRatio="h,4:3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:id="@+id/youtube_playerFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/scroll_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/playActionContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/large_padding">

                        <ImageView
                            android:id="@+id/playCurrentShow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ic_baseline_play_arrow" />

                        <LinearLayout
                            android:id="@+id/showTitleContainer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingLeft="@dimen/x_medium_padding">

                            <TextView
                                android:fontFamily="@font/helvetica_now_display_bold"
                                android:id="@+id/showTittle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingBottom="@dimen/xx_small_padding"
                                android:textColor="@color/white"
                                android:textSize="@dimen/large_size" />

                            <TextView
                                android:fontFamily="@font/helvetica_now_display_regular"
                                android:id="@+id/showDescription"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/white"
                                android:textSize="@dimen/medium_size" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/large_padding"
                        android:paddingRight="@dimen/large_padding">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/small_padding"
                            android:fontFamily="@font/helvetica_now_display_medium"
                            android:id="@+id/creator"
                            android:paddingBottom="@dimen/xx_small_padding"
                            android:textColor="@color/white"
                            android:textSize="@dimen/medium_size" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:id="@+id/duration"
                            android:fontFamily="@font/helvetica_now_display_medium"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="@dimen/small_size" />

                    </LinearLayout>

                </LinearLayout>

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/show_detail_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/share"
                        android:layout_below="@+id/playActionContainer"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/large_padding"
                        android:paddingTop="@dimen/xx_small_padding"
                        android:paddingRight="@dimen/large_padding"
                        android:paddingBottom="@dimen/small_padding"
                        android:visibility="visible">

                        <TextView
                            android:id="@+id/showDescriptionDetail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/helvetica_now_display_regular"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:textColor="@color/medium_light_gray"
                            android:textSize="@dimen/small_size"
                            android:visibility="visible" />

                        <TextView
                            android:id="@+id/readMore"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/helvetica_now_display_regular"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="Read More"
                            android:textColor="@color/medium_light_gray"
                            android:textSize="@dimen/small_size"
                            android:visibility="visible" />


                        <TextView
                            android:fontFamily="@font/helvetica_now_display_medium"
                            android:id="@+id/reminderView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/xx_large_margin"
                            android:drawableLeft="@drawable/ic_baseline_alarm"
                            android:drawablePadding="@dimen/small_padding"
                            android:text="@string/set_reminder"
                            android:textColor="@color/white"
                            android:textSize="@dimen/medium_size"
                            android:textStyle="bold"
                            android:visibility="gone" />

                    </LinearLayout>
                </androidx.core.widget.NestedScrollView>

                <TextView
                    android:id="@+id/share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="@dimen/xx_large_margin"
                    android:fontFamily="@font/helvetica_now_display_medium"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:drawableLeft="@drawable/ic_baseline_share_24"
                    android:drawablePadding="@dimen/small_padding"
                    android:paddingLeft="@dimen/large_padding"
                    android:paddingRight="@dimen/large_padding"
                    android:paddingBottom="@dimen/small_padding"
                    android:text="@string/share"
                    android:textColor="@color/white"
                    android:textSize="@dimen/medium_size"
                    />

                <RelativeLayout
                    android:id="@+id/moreEpisodesContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/large_padding"
                    android:paddingRight="@dimen/large_padding">

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/medium_light_gray" />

                    <TextView
                        android:id="@+id/moreTv"
                        android:fontFamily="@font/helvetica_now_display_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:text="@string/more_episodes"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:text="@string/see_all"
                        android:visibility="gone"
                        android:textColor="@color/white" />

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/moreEpisodesRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="?actionBarSize"
                    android:visibility="visible" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>


</RelativeLayout>
